# Generated by Django 5.0.4 on 2024-07-23 16:46

import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Company',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('is_available', models.BooleanField(db_index=True, default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('name', models.CharField(help_text='Name of the company', max_length=50)),
                ('logo', models.FileField(help_text='Logo of the company', upload_to='company/')),
                ('description', models.TextField(help_text='Description of the company')),
                ('rights', models.CharField(help_text='Copyrights of the company', max_length=50)),
                ('email', models.EmailField(max_length=254)),
                ('facebook', models.URLField(blank=True)),
                ('twitter', models.URLField(blank=True)),
                ('instagram', models.URLField(blank=True)),
                ('github', models.URLField(blank=True)),
            ],
            options={
                'verbose_name': 'company',
                'verbose_name_plural': 'company',
                'ordering': ['name'],
            },
        ),
        migrations.CreateModel(
            name='Keyword',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('is_available', models.BooleanField(db_index=True, default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('slug', models.SlugField(blank=True, unique=True)),
                ('word', models.CharField(max_length=20, unique=True)),
            ],
            options={
                'verbose_name': 'keyword',
                'verbose_name_plural': 'keywords',
                'ordering': ['word'],
            },
        ),
        migrations.CreateModel(
            name='Page',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('is_available', models.BooleanField(db_index=True, default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('slug', models.SlugField(blank=True, unique=True)),
                ('name', models.CharField(help_text='Unique key for the page, ex: About Us, Legal, etc', max_length=50, unique=True)),
                ('content', models.TextField(help_text='Content of the page')),
            ],
            options={
                'verbose_name': 'page',
                'verbose_name_plural': 'pages',
                'ordering': ['name'],
            },
        ),
    ]
