# Generated by Django 5.0.4 on 2024-07-19 19:24

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('locations', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Position',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('is_available', models.BooleanField(db_index=True, default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('position', models.CharField(max_length=100, unique=True)),
                ('description', models.TextField()),
            ],
            options={
                'verbose_name': 'position',
                'verbose_name_plural': 'positions',
                'ordering': ['pk'],
            },
        ),
        migrations.CreateModel(
            name='Applicant',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('is_available', models.BooleanField(db_index=True, default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('phone_number', models.CharField(max_length=15)),
                ('email', models.EmailField(max_length=100)),
                ('cv', models.FileField(upload_to='jobs/applicants/cv/')),
                ('message', models.TextField()),
                ('submitted_at', models.DateTimeField(auto_now_add=True)),
                ('status', models.CharField(choices=[('pending', 'Pending'), ('reviewed', 'Reviewed'), ('accepted', 'Accepted'), ('rejected', 'Rejected')], default='pending', max_length=10)),
                ('user_id', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
                ('position_id', models.ForeignKey(help_text='Applied for position...', on_delete=django.db.models.deletion.CASCADE, to='jobs.position')),
            ],
            options={
                'verbose_name': 'applicant',
                'verbose_name_plural': 'applicants',
                'ordering': ['pk'],
            },
        ),
        migrations.CreateModel(
            name='Worker',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('is_available', models.BooleanField(db_index=True, default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('phone_number', models.CharField(max_length=15)),
                ('address', models.CharField(max_length=255)),
                ('hired_date', models.DateField()),
                ('termination_date', models.DateField(blank=True, null=True)),
                ('hourly_rate', models.DecimalField(decimal_places=2, max_digits=10)),
                ('contract_type', models.CharField(choices=[('fixed_term', 'Fixed-term Contract'), ('project_based', 'Project-based Contract'), ('part_time', 'Part-time Contract'), ('intern', 'Internship Contract'), ('foreign', 'Foreign Worker Contract'), ('art_and_entertainment', 'Art and Entertainment Contract'), ('fee_based', 'Fee-based Contract'), ('indefinite', 'Indefinite Contract')], default='fixed_term', max_length=25)),
                ('contract_file', models.FileField(blank=True, null=True, upload_to='jobs/contracts/')),
                ('city_id', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='locations.city')),
                ('country_id', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='locations.country')),
                ('position_id', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='jobs.position')),
                ('state_id', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='locations.state')),
                ('user_id', models.OneToOneField(on_delete=django.db.models.deletion.DO_NOTHING, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'worker',
                'verbose_name_plural': 'workers',
                'ordering': ['pk'],
            },
        ),
    ]
