// Drop Dash - Database Structure

// Blogs App

Table Tag {
  id uuid [pk]
  name varchar
  slug slug
  is_available base
  updated_at base
  created_at base
}

Table Post {
  id uuid [pk]
  title varchar
  slug slug
  content text
  tags M2M
  author_id FK
  points int
  is_featured bool
  is_available base
  updated_at base
  created_at base
}

Ref: Post.tags < Tag.id
Ref: Post.author_id < User.id

Table PostReport {
  id uuid [pk]
  user_id FK
  post_id FK
  reason text
  priority varchar
  status bool
  is_available base
  updated_at base
  created_at base
}

Ref: PostReport.user_id < User.id
Ref: PostReport.post_id < Post.id

// Deliveries App

Table Delivery {
  id uuid [pk]
  order_id FK
  driver_id FK
  signature image
  status varchar
  picked_up_at datetime
  delivered_at datetime
  is_completed bool
  is_available base
  updated_at base
  created_at base
}

Ref: Delivery.order_id < Order.id
Ref: Delivery.driver_id < Driver.id

Table FailedDelivery {
  id uuid [pk]
  order_id FK
  driver_id FK
  reason text
  failed_at datetime
  is_available base
  updated_at base
  created_at base
}

Ref: FailedDelivery.order_id < Order.id
Ref: FailedDelivery.driver_id < Driver.id

// Drivers App

Table Driver {
  id uuid [pk]
  user_id FK
  phone varchar
  birth_date varchar
  driver_license file
  identification_document file
  social_security_certificate file
  criminal_record_certificate file
  address varchar
  city_id FK
  state_id FK
  country_id FK
  vehicle_type varchar
  status bool
  is_verified bool
  is_available base
  updated_at base
  created_at base
}

Ref: Driver.user_id < User.id
Ref: Driver.city_id < City.id
Ref: Driver.state_id < State.id
Ref: Driver.country_id < Country.id

Table DriverAssignment {
  id uuid [pk]
  driver_id FK
  order_id FK
  assigned_at datetime
  status varchar
  is_available base
  updated_at base
  created_at base
}

Ref: DriverAssignment.driver_id < Driver.id
Ref: DriverAssignment.order_id < Order.id

Table Resource {
  id uuid [pk]
  driver_id FK
  resource_type varchar
  note text
  status varchar
  is_available base
  updated_at base
  created_at base
}

Ref: Resource.driver_id < Driver.id

// Finances App

Table Revenue {
  id uuid [pk]
  order_id FK
  driver_id FK
  restaurant_id FK
  amount decimal
  transaction_type varchar
  is_available base
  updated_at base
  created_at base
}

// Home App

Table Company {
  id uuid [pk]
  name varchar
  logo file
  description text
  rights varchar
  email url
  facebook url
  twitter url
  instagram url
  github url
  is_available base
  updated_at base
  created_at base
}

Table Page {
  id uuid [pk]
  name varchar
  content text
  is_available base
  updated_at base
  created_at base
}

Table Keyword {
  id uuid [pk]
  word varchar
  is_available base
  updated_at base
  created_at base
}

// Jobs App

Table Position {
  id uuid [pk]
  position varchar
  description text
  is_available base
  updated_at base
  created_at base
}

Table Worker {
  id uuid [pk]
  user_id FK
  phone_number varchar
  address varchar
  city_id FK
  state_id FK
  country_id FK
  position_id FK
  hired_date date
  termination_date date
  hourly_rate decimal
  contract_type varchar
  status varchar
  contract_file file
  is_available base
  updated_at base
  created_at base
}

Ref: Worker.user_id < User.id
Ref: Worker.city_id < City.id
Ref: Worker.state_id < State.id
Ref: Worker.country_id < Country.id
Ref: Worker.position_id < Position.id

Table Applicant {
  id uuid [pk]
  user_id FK
  phone_number varchar
  email email
  position_id FK
  cv file
  message text
  submitted_at datetime
  status varchar
  is_available base
  updated_at base
  created_at base
}

Ref: Applicant.user_id < User.id
Ref: Applicant.position_id < Position.id

// Locations App

Table Country {
  id uuid [pk]
  name varchar
  is_available base
  updated_at base
  created_at base
}

Table State {
  id uuid [pk]
  name varchar
  country_id FK
  is_available base
  updated_at base
  created_at base
}

Ref: State.country_id < Country.id

Table City {
  id uuid [pk]
  name varchar
  state_id FK
  is_available base
  updated_at base
  created_at base
}

Ref: City.state_id < State.id

// Orders App

Table Order {
  id uuid [pk]
  user_id FK
  shipping_name varchar
  shipping_phone varchar
  transaction varchar
  address_1 varchar
  address_2 varchar
  city_id FK
  state_id FK
  country_id FK
  note text
  restaurant_id FK
  amount decimal
  status bool
  payment_method varchar
  is_payment bool
  is_valid bool
  is_available base
  updated_at base
  created_at base
}

Ref: Order.user_id < User.id
Ref: Order.city_id < City.id
Ref: Order.state_id < State.id
Ref: Order.country_id < Country.id
Ref: Order.restaurant_id < Restaurant.id

Table OrderItem {
  id uuid [pk]
  order_id FK
  food_id FK
  quantity int
  price decimal
  is_available base
  updated_at base
  created_at base
}

Ref: OrderItem.order_id < Order.id
Ref: OrderItem.food_id < Food.id

// Promotions App

Table Promotion {
  id uuid [pk]
  creator_id FK
  name varchar
  conditions text
  start_date date
  end_date date
  is_active bool
  image image
  is_available base
  updated_at base
  created_at base
}

Ref: Promotion.creator_id < User.id

Table FixedCoupon {
  id uuid [pk]
  name varchar
  discount_price decimal
  code varchar
  start_date date
  end_date date
  quantity int
  is_active bool
  is_available base
  updated_at base
  created_at base
}

Table PercentageCoupon {
  id uuid [pk]
  name varchar
  discount_percentage int
  code varchar
  start_date date
  end_date date
  quantity int
  is_active bool
  is_available base
  updated_at base
  created_at base
}

// Restaurants App

Table Restaurant {
  id uuid [pk]
  user_id FK
  name varchar
  slug slug
  image image
  banner image
  description text
  specialty varchar
  address varchar
  city_id FK
  state_id FK
  country_id FK
  opening_time datetime
  closing_time datetime
  phone varchar
  website url
  is_open bool
  is_verified bool
  banking_certificate file
  e_rut file
  legal_rep_email file
  legal_rep_identity_document file
  legal_rep_power_of_attorney file
  is_available base
  updated_at base
  created_at base
}

Ref: Restaurant.user_id < User.id
Ref: Restaurant.city_id < City.id
Ref: Restaurant.state_id < State.id
Ref: Restaurant.country_id < Country.id

Table Category {
  id uuid [pk]
  name varchar
  restaurant_id FK
  is_available base
  updated_at base
  created_at base
}

Ref: Category.restaurant_id < Restaurant.id

Table Food {
  id uuid [pk]
  name varchar
  description text
  price decimal
  sale_price decimal
  image image
  restaurant_id FK
  category_id FK
  is_featured bool
  is_available base
  updated_at base
  created_at base
}

Ref: Food.restaurant_id < Restaurant.id
Ref: Food.category_id < Category.id

// Reviews App

Table Review {
  id uuid [pk]
  content_type FK
  object_id uuid
  content_object GFG
  user_id FK
  rating int
  comment text
  is_available base
  updated_at base
  created_at base
}

Ref: Review.content_type < Restaurant.id
Ref: Review.user_id < User.id

// Users App

Table User {
  id uuid [pk]
  email varchar
  username varchar
  slug slug
  first_name varchar
  last_name varchar
  date_birth date
  points int
  role varchar
  is_active bool
  is_staff bool
  created_at date
  updated_at date
}

// Utilities App

Table Base {
  id uuid [pk]
  is_available bool
  updated_at datetime
  created_at datetime
}
